ai-gateway/istio/gloo-egress-waypoint-bak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gloo-egress-waypoint
  namespace: common-infra
#  annotations:
#    gateway.gloo.solo.io/gateway-parameters-name: gloo-egress-waypoint-override  
spec:
  gatewayClassName: gloo-waypoint
  listeners:
  - name: proxy
    port: 15088
    protocol: istio.io/PROXY
  - name: hbone
    port: 15008
    protocol: istio.io/HBONE
