ai-gateway/istio/gloo-egress-waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gloo-egress-waypoint
  namespace: common-infra
  annotations:
    gateway.gloo.solo.io/gateway-parameters-name: gloo-egress-ai-waypoint-override  
spec:
  gatewayClassName: gloo-waypoint
  listeners:
  - name: proxy
    port: 15088
    protocol: istio.io/PROXY
