ai-gateway/istio/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openai-egress
  namespace: common-infra
spec:
  parentRefs:
    - name: gloo-egress-waypoint
      namespace: common-infra
  rules:
  hostnames:
  - "api.openai.com"
  - matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
    filters:
    - extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: openai-passthrough-route-options
      type: ExtensionRef
    backendRefs:
    - name: openai-api-upstream
      namespace: gloo-system
      group: gloo.solo.io
      kind: Upstream
