ai-gateway/istio/httpbin-httproute-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: common-infra
spec:
  parentRefs:
    - name: gloo-egress-waypoint
      namespace: common-infra
  hostnames:
  - httpbin.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /get
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Traversed-Waypoint
          value: gloo-egress-ai-waypoint
    backendRefs:
    - kind: Hostname
      group: networking.istio.io
      name: httpbin.org
      port: 80
