ai-gateway/istio/httpbin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: common-infra
spec:
  parentRefs:
  - group: "networking.istio.io"
    kind: ServiceEntry
    name: httpbin
  hostnames:
  - httpbin.org
  rules:
  - backendRefs:
    - kind: Hostname
      group: networking.istio.io
      name: httpbin.org
      port: 80
