ai-gateway/istio/httpbin-serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: httpbin
  namespace: common-infra
spec:
  hosts:
  - httpbin.org
  # remove this when we have auto-allocation
  # working on the waypoint  
  addresses:
  - 240.240.0.8  
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS    
  resolution: DNS
  endpoints:
  - address: httpbin.org
    weight: 1
